--- a/frontend/src/app/sales-day/sales-day.component.html
+++ b/frontend/src/app/sales-day/sales-day.component.html
@@ -1,59 +1,59 @@
 <body>
-  <div id="infoDiv">
-    <!-- Verkaufstag anzneige -->
-    <h1>Verkaufstag: {{ dataService.selectedSalesDay.value.name }}</h1>
-    <h5>
-      {{
-      dataService.getSalesDayDate(dataService.selectedSalesDay.value)
-      | date : "dd.MM.YYYY"
-      }}
-    </h5>
 
-  </div>
-
-
-  <!-- Anzeige der hinzugefügten Ochsen -->
-  <div class="oxen-container">
-    <div class="oxen-list">
-      <h3 class="heading" style="margin-right: 15px">Ochsen:</h3>
-      <div class="dropdown">
-        <button class="btn btn-warning dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Alle Namen
-        </button>
-
-        <ul class="dropdown-menu">
-          <li class="dropdown-item">
-            <input class="form-control" placeholder="Ochsen name" [(ngModel)]="newOchsenName">
-          </li>
-          <li class="dropdown-item">
-            <button type="button" class="btn btn-success" (click)="newOchse()">Ochsen hinzufügen</button>
-          </li>
-          @for (ochse of ochsenArray; track $index) {
-            <li class="dropdown-item">{{ochse}}</li>
-          }
-        </ul>
+  <div>
+    <div class="row">
+      <div class="col-md-6">
+        <!--Top Left-->
+        <div>
+          <h1>Verkaufstag: {{ dataService.selectedSalesDay.value.name }}</h1>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <!--Top Right-->
+        <div class="float-end">
+          <div id="save-file-button" (click)="exportButtonClick()">
+            <button>
+              <mat-icon>local_printshop</mat-icon>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+         <!--Bottom Left-->
+        <div>
+          <div class="oxen-container">
+            <div class="oxen-list">
+              <h3 class="heading" style="margin-right: 15px">Ochsen:</h3>
+              <div class="dropdown">
+                <button class="btn btn-warning dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Alle Namen
+                </button>
+      
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item">
+                    <input class="form-control" placeholder="Ochsen name" [(ngModel)]="newOchsenName">
+                  </li>
+                  <li class="dropdown-item">
+                    <button type="button" class="btn btn-success" (click)="newOchse()">Ochsen hinzufügen</button>
+                  </li>
+                  @for (ochse of ochsenArray; track $index) {
+                  <li class="dropdown-item">{{ochse}}</li>
+                  }
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <!--Bottom Right-->
+        <div class="float-end">
+          <div>
+            <h5>{{ dataService.getSalesDayDate(dataService.selectedSalesDay.value) | date : "dd.MM.YYYY" }}</h5>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-
-
-
-
-  <!-- Texteingabefeld für den Namen des Ochsen -->
-  <div *ngIf="showOxInput" class="ox-input-container">
-    <div class="input-group" style="display: flex !important">
-      <input type="text" class="form-control" placeholder="Name" [(ngModel)]="oxName" />
-      <button class="btn btn-orange" (click)="addOx(); toggleOxInput()">
-        Hinzufügen
-      </button>
-    </div>
-  </div>
-
-  <!-- Save File -->
-  <div id="save-file-button" (click)="exportButtonClick()">
-    <button>
-      <mat-icon>local_printshop</mat-icon>
-    </button>
   </div>
 
   <div id="kunde-wrapper">
