--- a/frontend/src/app/stock-overview/stock-overview.component.scss
+++ b/frontend/src/app/stock-overview/stock-overview.component.scss
@@ -3,6 +3,11 @@
     color: white;
 }
 
+.btn-secondary{
+    margin-left: 20px;
+    margin-right: 10px;
+}
+
 /* stock-overview.component.scss */
 
 table {
