--- a/frontend/src/app/customers/single-customer/single-customer.component.html
+++ b/frontend/src/app/customers/single-customer/single-customer.component.html
@@ -25,7 +25,7 @@
             <td>{{order.paidStatus==='true'?'ja':'nein'}}</td>
             <td>
                 <button class="btn btn-danger" (click)="deleteOrder(order)">
-                    -
+                    Löschen
                 </button>
             </td>
             <td>
