--- a/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
+++ b/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
@@ -25,8 +25,8 @@
     <tr *ngFor="let order of recentOrders()">
       <td>{{order.id}}</td>
       <td>{{order.customerName}}</td>
-      <td>ToDo: Category</td>
-      <td>{{order.id | date : "dd.MM.yyyy HH:mm"}}</td>
+      <td>{{order.category}}</td>
+      <td>{{order.date| date : "dd.MM.yyyy"}}</td>
       <td>{{order.amount}} kg</td>
       <td>{{order.price}} €</td>
       <td>{{order.deposit}} €</td>
