--- a/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
+++ b/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
@@ -22,7 +22,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let order of recentOrders()">
+    <tr *ngFor="let order of dataService.recentOrders()">
       <td>{{order.id}}</td>
       <td>{{order.customerName}}</td>
       <td>{{order.category}}</td>
