--- a/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
+++ b/frontend/src/app/dashboard/recent-orders/recent-orders.component.html
@@ -18,7 +18,7 @@
       <th class="header" scope="col">Preis</th>
       <th class="header" scope="col">Pfand</th>
       <th class="header" scope="col">Anmerkung</th>
-      <th class="header" scope="col">Bezahlt?</th>
+      <th class="header" scope="col">Bezahlt</th>
     </tr>
   </thead>
   <tbody>
