--- a/frontend/src/app/stock-overview/stock-overview.component.html
+++ b/frontend/src/app/stock-overview/stock-overview.component.html
@@ -49,7 +49,8 @@
                       >
                         Preis/kg ändern
                       </button>
-                      <li
+                      <ul  *ngIf="selectedMeatPiece() === meatPiece">
+                      <li  
                         *ngFor="let meatPiecePart of meatPieceParts()"
                       >
                         <div style="padding-left: 60px">
@@ -57,6 +58,7 @@
                         <button class="btn btn-danger" (click)="deleteMeatPiecePart(meatPiecePart)">Löschen</button>
                         </div>
                       </li>
+                    </ul>
                     </div>
                   </li>
                 </ul>
