--- a/frontend/src/app/dashboard/recent-orders/recent-orders.component.scss
+++ b/frontend/src/app/dashboard/recent-orders/recent-orders.component.scss
@@ -21,4 +21,10 @@ td {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 20px auto;
+    font-family: Arial, sans-serif;
+    font-size: 32px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 10px;
 }
